* improved true results again with detection of conditional code and excludes from parsing
* upgrade ssh reference to version 0.12 (thanks to Remi Collet)
* upgrade openssl reference with new PHP 5.4.8 constants (thanks to Remi Collet)
* upgrade standard reference with PHP 5.4.8 optional second argument for assert() to specify custom message

.Bug fixes:
* PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
* standard reference fixed: mkdir mode parameter is required since PHP 4.0.0 and not 4.2.0 (it became optional)
* multiple reports may now be appended in the same report file
* fixed phpunit-growl.xml configuration file: display icons to both pear or stand-alone installation
* avoid php warnings when argument to list command (of CLI tool) is invalid (requires Console_CommandLine 1.2.0 or better)


== Version 2.8.1 (2012-09-28)

.Additions and changes:
* none

.Bug fixes:
* fixed latest version of standard and Core references
* fixed curl reference about new PHP 5.4 constants
* fixed default version about anonymous function
* phpci list command raises notice errors


== Version 2.8.0 (2012-09-15)

.Versions summary:
* 2.8.0 support all PHP versions until 5.4.7
* 2.7.0 support all PHP versions until 5.4.6
* 2.6.0 support all PHP versions until 5.4.5
* 2.5.0 support all PHP versions until 5.4.4
* 2.4.0 support all PHP versions until 5.4.3
* 2.3.0 support all PHP versions until 5.4.0
* 2.2.0 support all PHP versions until 5.3.10
* 2.1.0 support all PHP versions until 5.3.8

.Additions and changes:
* add 5 new references data dictionnaries related to extensions:
  amqp, geoip, inclued, mongo, XCache
* introduces a new Reference API that allow to filter elements (interfaces, classes, functions, constants)
on php version or extension release, with or without a particular relationship (like operator in version_compare)
* Full filter support for 25 extensions (that have all releases documented):
  ** amqp (1.0.7)